<resources>
    <string name="app_name">Groce Mart</string>

    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="Cart">Cart</string>
    <string name="Account">Dashboard</string>


    <string name="Grocery">GROCERY</string>
    <string name="Restaurant">DELICACIES NEAR YOU</string>
    <string name="Meat">MEATS</string>
    <string name="SelectYourLocation">Select Your Location</string>
    <string name="register">Register</string>
    <string name="changePassword">Change Password</string>
    <string name="userProfile">User Profile</string>
    <string name="Login">LOGIN</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="account">Already have an account?   </string>
    <string name="Notregistered">Not registered? </string>
    <string name="login"> Log in</string>
    <string name="Createanaccount">  Create an account</string>
    <string name="dashbord">User DashBoard</string>
    <string name="address">Address Add </string>
    <string name="cart">Cart</string>
    <string name="checkout">Check Out </string>
    <string name="loc">Select Your Location</string>


    <string name="BBRoyal">BB Royal Organic - Toor Dal -  500kg</string>
    <string name="BiriyaniMasala">Aachi Biriyani Masala</string>
    <string name="title_activity_show_location">Map</string>
    <string name="ShopNmae">Narendra Shop</string>

    <string name="MYORDER">MY ORDER</string>
    <string name="PROFILE">PROFILE</string>
    <string name="CHANGEPASSWORD">CHANGE PASSWORD</string>
    <string name="ADDRESS">ADDRESS</string>
    <string name="WALLET">WALLET</string>
    <string name="Chat">Chat</string>
    <string name="LOGOUT">LOGOUT</string>

    <string name="entername">Enter a valide Name</string>
    <string name="entercontact">Enter a valide MobileNumber</string>
    <string name="enteremail">Enter a valide emailAddress</string>
    <string name="enterpassword">Enter a valide password</string>

    <string name="night_mode_off">NIGHT MODE OFF</string>
    <string name="night_mode_on">NIGHT MODE ON</string>

</resources>