<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".activity.SigninPage">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Login"
        android:textColor="#58E8B6"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imagelogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/text"
        android:src="@drawable/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"></ImageView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imagelogin"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="5dp">

        <LinearLayout
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_fullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/registerback"
                android:drawableLeft="@drawable/baseline_person"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:ems="10"
                android:hint="UserName or Mobile No"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/edit_fullname"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/registerback"
                android:drawableLeft="@drawable/baseline_lock"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:ems="10"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="* Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                android:textColor="#FFFFFF"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/forgtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_password"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ForgotPassword"
                android:textColor="#58E8B6"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:layout_gravity="right"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/signin"
                    android:layout_width="@dimen/detailsPayment_button_width"
                    android:layout_height="@dimen/detailsPayment_button_height"
                    android:layout_below="@id/log"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_back"
                    android:text="Signin"
                    android:textAllCaps="false"
                    android:textColor="@color/btntextcolor"
                    android:textStyle="bold"></Button>

                <RelativeLayout
                    android:id="@+id/r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/submit"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/login1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Notregistered"
                        android:textColor="#050505"
                        android:textSize="@dimen/textSize"
                        />

                    <TextView
                        android:id="@+id/createaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/login1"
                        android:text="@string/Createanaccount"
                        android:textColor="#58E8B6"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>


</RelativeLayout>